app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii  # The name of the Deployment object.
spec:
  replicas: 1  # Number of pod replicas to run.
  selector:
    matchLabels:
      app: firefly-iii  # Label selector to identify the pods managed by this Deployment.
  template:
    metadata:
      labels:
        app: firefly-iii  # Labels for the pods created by this Deployment.
    spec:
      containers:
      - name: firefly-iii  # Name of the container.
        image: fireflyiii/core:latest  # Docker image to use for the container.
        ports:
        - containerPort: 8080  # Port on which the container will listen.
        volumeMounts:
        - name: firefly-iii-upload
          mountPath: /var/www/html/storage/upload  # Path in the container where the volume will be mounted.
      volumes:
      - name: firefly-iii-upload
        persistentVolumeClaim:
          claimName: firefly-iii-upload-pvc  # Reference to the PersistentVolumeClaim for the storage volume.
