db-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii-db  # The name of the Deployment object for the database.
spec:
  replicas: 1  # Number of pod replicas to run.
  selector:
    matchLabels:
      app: firefly-iii-db  # Label selector to identify the pods managed by this Deployment.
  template:
    metadata:
      labels:
        app: firefly-iii-db  # Labels for the pods created by this Deployment.
    spec:
      containers:
      - name: mariadb  # Name of the container.
        image: mariadb:lts  # Docker image to use for the container.
        ports:
        - containerPort: 3306  # Port on which the container will listen.
        volumeMounts:
        - name: firefly-iii-db
          mountPath: /var/lib/mysql  # Path in the container where the volume will be mounted.
      volumes:
      - name: firefly-iii-db
        persistentVolumeClaim:
          claimName: firefly-iii-db-pvc  # Reference to the PersistentVolumeClaim for the storage volume.
