db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly-iii-db
  template:
    metadata:
      labels:
        app: firefly-iii-db
    spec:
      containers:
      - name: mariadb
        image: mariadb:lts
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: firefly-iii-db
          mountPath: /var/lib/mysql
      volumes:
      - name: firefly-iii-db
        persistentVolumeClaim:
          claimName: firefly-iii-db-pvc
