deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii  # The name of the Deployment object.
spec:
  replicas: 1  # Number of pod replicas to run.
  selector:
    matchLabels:
      app: firefly-iii  # Selector to match pods with the label "app: firefly-iii".
  template:
    metadata:
      labels:
        app: firefly-iii  # Label applied to the pods created by this deployment.
    spec:
      containers:
      - name: firefly-iii  # Name of the container running in the pod.
        image: fireflyiii/core:latest  # The Docker image to run.
        ports:
        - containerPort: 8080  # The port on which the application listens.
        volumeMounts:
        - name: firefly-iii-upload
          mountPath: /var/www/html/storage/upload  # Mounts the volume at this path inside the container.
      volumes:
      - name: firefly-iii-upload
        persistentVolumeClaim:
          claimName: firefly-iii-pvc  # Refers to the PersistentVolumeClaim defined in pvc.yaml.

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii-db  # The name of the Deployment object for the database.
spec:
  replicas: 1  # Number of pod replicas to run for the database.
  selector:
    matchLabels:
      app: firefly-iii-db  # Selector to match pods with the label "app: firefly-iii-db".
  template:
    metadata:
      labels:
        app: firefly-iii-db  # Label applied to the pods created by this deployment.
    spec:
      containers:
      - name: mariadb  # Name of the container running the MariaDB database.
        image: mariadb:lts  # The Docker image for MariaDB.
        ports:
        - containerPort: 3306  # The port on which the database listens.
        volumeMounts:
        - name: firefly-iii-db-data
          mountPath: /var/lib/mysql  # Mounts the volume at this path inside the container.
      volumes:
      - name: firefly-iii-db-data
        persistentVolumeClaim:
          claimName: firefly-iii-db-pvc  # Refers to the PersistentVolumeClaim defined in pvc.yaml.
