app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
spec:
  selector:
    app: firefly-iii
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
