db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii-db  # The name of the Service object for the database.
spec:
  selector:
    app: firefly-iii-db  # Selector to match pods with the label "app: firefly-iii-db".
  ports:
  - protocol: TCP  # Protocol used by the service.
    port: 3306  # Port on which the service is exposed externally.
    targetPort: 3306  # Port on which the database container is listening.
  type: ClusterIP  # Default type. Exposes the service only within the cluster.
